# derailed-gateway

./: .env.example  .gitignore  Dockerfile  app.py  auto-deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  supervisord.conf
.github/workflows/: container_upload.yml
gateway/: auth.py  database.py  rate_limit.py  session.py  session_maker.py  sub.py
gateway/models/: __init__.py  guild.py  user.py
gateway/payload/: guild_members.py  identify.py  receive.py
